--- a/index.html
+++ b/index.html
@@ -118,71 +118,39 @@
                             }
                         }
 
-                        const apiKeys = [
-                            "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6Im1lbV9jbHRyY2dvdzYwMXFtMHNubTV4Y3Nna3Q4IiwidXNlcl9pZCI6Im1lbV9jbHRyY2dvdzYwMXFtMHNubTV4Y3Nna3Q4IiwiYXVkIjoiYWNjZXNzIiwiZXhwIjowLjB9.Z1PqCoae9ML_BfZkkj1dQ2JAxBnL6hWVknjatmtMGmo",
-                            "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjFjN2ZmODE1LTU3ZDgtNDVkYi1iZDRmLTZiMmQ5OTJmZWRjZiIsInVzZXJfaWQiOiIxYzdmZjgxNS01N2Q4LTQ1ZGItYmQ0Zi02YjJkOTkyZmVkY2YiLCJhdWQiOiJhY2Nlc3MiLCJleHAiOjAuMH0.qat0e7HsYpPgtl7pvQlyRP_NbjeRPklt1WptZ_1kVY0",
-                            "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjExNDRhZjRlLTM3YzItNDM3ZC04N2RiLTVlYzJhZDEzYmY4MCIsInVzZXJfaWQiOiIxMTQ0YWY0ZS0zN2MyLTQzN2QtODdkYi01ZWMyYWQxM2JmODAiLCJhdWQiOiJhY2Nlc3MiLCJleHAiOjAuMH0.xQ5j-VcdKA2UCrYVZ2iiOycE79ip0qh9eCXdF9DBV-8",
-                            "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjNlNGYwNmM3LWJmY2YtNDU3Mi1iNTgyLTk5YjI3Mzc4NTY0ZiIsInVzZXJfaWQiOiIzZTRmMDZjNy1iZmNmLTQ1NzItYjU4Mi05OWIyNzM3ODU2NGYiLCJhdWQiOiJhY2Nlc3MiLCJleHAiOjAuMH0.2hRZWwvyfVy8JqxpPX-lr8M5HMe2vixeWO_D_jH4e-0",
-                            "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6Ijg3YzZmNjY0LTg5YmEtNDYyNi1iMzU0LTkwZjk3MzQzMzFiYiIsInVzZXJfaWQiOiI4N2M2ZjY2NC04OWJhLTQ2MjYtYjM1NC05MGY5NzM0MzMxYmIiLCJhdWQiOiJhY2Nlc3MiLCJleHAiOjAuMH0.7LQY8AnithVs6hcL3W7zkWQ-D9oPXxgmcTml61aLRK4",
-                            "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6Im1lbV9jbHM2N2tiYnMxZTd1MHNvY2hvcno1c2diIiwidXNlcl9pZCI6Im1lbV9jbHM2N2tiYnMxZTd1MHNvY2hvcno1c2diIiwiYXVkIjoiYWNjZXNzIiwiZXhwIjowLjB9.BzZYBLdJbsKcdkIfVkHK0vu5PM3_BMKCQJnIrxB20ok",
-                            "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6Im1lbV9jbHR0dzhwdW4wMTlxMHNyMDR5OTM5dGNjIiwidXNlcl9pZCI6Im1lbV9jbHR0dzhwdW4wMTlxMHNyMDR5OTM5dGNjIiwiYXVkIjoiYWNjZXNzIiwiZXhwIjowLjB9.hCCpaBmscyyya9xCj9jVWQDPzKdpDT7S90P7ibyF8_A",
-                            "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY2MGFhODY2LWJmOTItNGM5My05YzVhLTE1YTk0NTk4NTI5MyIsInVzZXJfaWQiOiI2NjBhYTg2Ni1iZjkyLTRjOTMtOWM1YS0xNWE5NDU5ODUyOTMiLCJhdWQiOiJhY2Nlc3MiLCJleHAiOjAuMH0._CEv_Sibg9JVrIW614pbL3C1woeOkqkUI4FKUJxTVD0"
-                        ];
-                        let currentApiKeyIndex = 0;
-
-                        async function predictImage(imageUrl, attempt = 0) {
+                        async function predictImage(imageUrl) {
                             try {
-                                const apiEndpoint =
-                                    "https://api.aiornot.com/v1/reports/image";
-                                const apiKey = apiKeys[currentApiKeyIndex];
+                                const apiEndpoint = 'https://api.aiornot.com/v1/reports/image';
+                                const apiKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6Im1lbV9jbHM2N2tiYnMxZTd1MHNvY2hvcno1c2diIiwidXNlcl9pZCI6Im1lbV9jbHM2N2tiYnMxZTd1MHNvY2hvcno1c2diIiwiYXVkIjoiYWNjZXNzIiwiZXhwIjowLjB9.BzZYBLdJbsKcdkIfVkHK0vu5PM3_BMKCQJnIrxB20ok'; // Replace 'your_api_key_here' with your actual API key
 
                                 const response = await fetch(apiEndpoint, {
-                                    method: "POST",
+                                    method: 'POST',
                                     headers: {
-                                        Authorization: `Bearer ${apiKey}`,
-                                        "Content-Type": "application/json",
-                                        Accept: "application/json",
+                                        'Authorization': `Bearer ${apiKey}`,
+                                        'Content-Type': 'application/json',
+                                        'Accept': 'application/json'
                                     },
-                                    body: JSON.stringify({ object: imageUrl }),
+                                    body: JSON.stringify({ object: imageUrl })
                                 });
 
                                 if (!response.ok) {
-                                    // If fetch fails, switch to the next API key
-                                    currentApiKeyIndex =
-                                        (currentApiKeyIndex + 1) % apiKeys.length;
-                                    // Retry prediction using the next API key if attempts haven't exceeded the number of keys
-                                    if (attempt < apiKeys.length - 1) {
-                                        return predictImage(imageUrl, attempt + 1);
-                                    } else {
-                                        console.error("All API keys failed.");
-                                        return "Error predicting image.";
-                                    }
+                                    throw new Error('Failed to fetch');
                                 }
 
                                 const data = await response.json();
 
                                 let result;
 
-                                if (data.report.verdict === "ai") {
-                                    result = "It appears to be an AI-generated Image.";
+                                if (data.report.verdict === 'ai') {
+                                    result = 'It appears to be an AI-generated Image.';
                                 } else {
-                                    result = "It appears to be a Real Image.";
+                                    result = 'It appears to be a Real Image.';
                                 }
 
                                 // Display the result in bold letters where "AI-ssured" is written
                                 resultText.innerHTML = `<p style="font-size: 20px;">AI<span class="upload">-ssured says</span>: <strong>${result}</strong></p>`;
                             } catch (error) {
-                                console.error("Error predicting image:", error);
-                                // If fetch fails, switch to the next API key
-                                currentApiKeyIndex =
-                                    (currentApiKeyIndex + 1) % apiKeys.length;
-                                // Retry prediction using the next API key if attempts haven't exceeded the number of keys
-                                if (attempt < apiKeys.length - 1) {
-                                    return predictImage(imageUrl, attempt + 1);
-                                } else {
-                                    console.error("All API keys failed.");
-                                    return "Error predicting image.";
-                                }
+                                console.error('Error predicting image:', error);
 
                                 // Display error message
                                 resultText.innerHTML = `<p style="font-size: 20px;">AI<span class="upload">-ssured says</span>: <strong>Error predicting image.</strong></p>`;
@@ -203,11 +171,8 @@
                                     const predictionResult = predictions.dataSync()[0];
                                     const threshold = 0.42;
 
-                                    if (predictionResult == 0.42295992374420166 || predictionResult == 0.11040645837783813 || predictionResult == 0.44985905289649963 || predictionResult == 0.2438831329345703 || predictionResult == 0.09625602513551712 || predictionResult == 0.41332703828811646) {
-                                        result = "It appears to be a Real Image.";
-                                    } else if (predictionResult == 0.9471663236618042 || predictionResult == 0.7512395977973938 || predictionResult == 0.6510717868804932 || predictionResult == 0.5024317502975464 || predictionResult == 0.6662971377372742 || predictionResult == 0.9304381608963013 || predictionResult == 0.9181833863258362 || predictionResult == 0.651176393032074 || predictionResult == 0.7725119590759277 || predictionResult == 0.7105202674865723 || predictionResult == 0.42853304743766785) {
-                                        result = "It appears to be an AI-generated Image.";
-                                    } else if (predictionResult <= threshold) {
+                                    
+                                    if (predictionResult <= threshold) {
                                         result = "It appears to be an AI-generated Image.";
                                     } else {
                                         result = "It appears to be a Real Image.";
@@ -548,27 +513,20 @@
         async function predictImage(imageUrl) {
             // Replace with your actual model and prediction logic
             const model = await tf.loadLayersModel('model.json');
+            const image = await loadImage(imageUrl);
+            const preprocessedImage = preprocessImage(image);
+            const predictions = model.predict(preprocessedImage);
+
+            const predictionResult = predictions.dataSync()[0];
+            const threshold = 0.42;
 
             let result;
-
-            if (imageUrl) {
-                const image = await loadImage(imageUrl);
-                const preprocessedImage = preprocessImage(image);
-                const predictions = model.predict(preprocessedImage);
-
-                const predictionResult = predictions.dataSync()[0];
-                const threshold = 0.42;
-
-                if (predictionResult == 0.42295992374420166 || predictionResult == 0.11040645837783813 || predictionResult == 0.44985905289649963 || predictionResult == 0.2438831329345703 || predictionResult == 0.09625602513551712 || predictionResult == 0.41332703828811646) {
-                    result = "It appears to be a Real Image.";
-                } else if (predictionResult == 0.9471663236618042 || predictionResult == 0.7512395977973938 || predictionResult == 0.6510717868804932 || predictionResult == 0.5024317502975464 || predictionResult == 0.6662971377372742 || predictionResult == 0.9304381608963013 || predictionResult == 0.9181833863258362 || predictionResult == 0.651176393032074 || predictionResult == 0.7725119590759277 || predictionResult == 0.7105202674865723 || predictionResult == 0.42853304743766785) {
-                    result = "It appears to be an AI-generated Image.";
-                } else if (predictionResult <= threshold) {
-                    result = "It appears to be an AI-generated Image.";
-                } else {
-                    result = "It appears to be a Real Image.";
-                }
+            if (predictionResult < threshold) {
+                result = "It appears to be an AI-generated Image.";
+            } else {
+                result = "It appears to be a Real Image.";
             }
+
             // Display the result in bold letters where "AI-ssured" is written
             document.getElementById('chat-history').innerHTML +=
                 `<div class="bot-message result-text">AI<span class="upload">-ssured says </span>: <strong>${result}</strong></div>`;
